# SimuSound_rpi

./: .gitignore  CMakeLists.txt  bt_remote.cpp  bt_remote.h  build.md  camera_base.h  camera_mipi.cpp  camera_mipi.h  camera_usb.cpp  camera_usb.h  readme.md  stereo_matching.cpp  stereo_matching.h  test_driver.cpp  utils.cpp  utils.h
bt_remote_testing/: CMakeLists.txt  ble_remote_test.cpp  bt_remote_test.cpp
edgetpu/: libedgetpu.so.1
edgetpu/misc/: install_udev_rule.sh
flite/: CMakeLists.txt
flite/lang/cmu_us_kal/: cmu_us_kal.c  cmu_us_kal.h
flite/lang/cmu_us_kal16/: cmu_us_kal16.c  cmu_us_kal16.h
flite/main/: flite_main.c
gattlib/examples/read_write/: read_write.c
imu/: CMakeLists.txt  ICM_20948_rpi.cpp  ICM_20948_rpi.h  imu_test.cpp  links.txt
imu/util/: ICM_20948_C.c  ICM_20948_C.h  ICM_20948_REGISTERS.h  arduino_wrapper.h
mipi_cam_test/: CMakeLists.txt  main.cpp  mmal_window.cpp  mmal_window_2.cpp  mmal_window_3.cpp
mobiledet/: CMakeLists.txt  mobiledet.cpp  mobiledet.h  mobiledet_testing.cpp  ssdlite_mobiledet_combined_dataset.tflite
opencv4/include/opencv4/opencv2/: opencv_modules.hpp
opencv4/lib/: libopencv_alphamat.so.4.5.2  libopencv_aruco.so.4.5.2  libopencv_bgsegm.so.4.5.2  libopencv_bioinspired.so.4.5.2  libopencv_calib3d.so.4.5.2  libopencv_ccalib.so.4.5.2  libopencv_core.so.4.5.2  libopencv_datasets.so.4.5.2  libopencv_dnn_objdetect.so.4.5.2  libopencv_dnn_superres.so.4.5.2  libopencv_dpm.so.4.5.2  libopencv_face.so.4.5.2  libopencv_features2d.so.4.5.2  libopencv_flann.so.4.5.2  libopencv_freetype.so.4.5.2  libopencv_fuzzy.so.4.5.2  libopencv_gapi.so.4.5.2  libopencv_hdf.so.4.5.2  libopencv_hfs.so.4.5.2  libopencv_highgui.so.4.5.2  libopencv_img_hash.so.4.5.2  libopencv_imgcodecs.so.4.5.2  libopencv_intensity_transform.so.4.5.2  libopencv_line_descriptor.so.4.5.2  libopencv_mcc.so.4.5.2  libopencv_ml.so.4.5.2  libopencv_objdetect.so.4.5.2  libopencv_optflow.so.4.5.2  libopencv_phase_unwrapping.so.4.5.2  libopencv_photo.so.4.5.2  libopencv_plot.so.4.5.2  libopencv_quality.so.4.5.2  libopencv_rapid.so.4.5.2  libopencv_reg.so.4.5.2  libopencv_rgbd.so.4.5.2  libopencv_saliency.so.4.5.2  libopencv_shape.so.4.5.2  libopencv_stereo.so.4.5.2  libopencv_stitching.so.4.5.2  libopencv_structured_light.so.4.5.2  (+12 more)
opencv4/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
sound-environment-model/: readme.md
stereo_cal/: CMakeLists.txt  stereo_cal.cpp  stereo_undistort.cpp
tensorflow/test_tflite/: CMakeLists.txt  get_ver.cpp
